--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "axios": "^1.5.1",
     "core-js": "^3.8.3",
     "element-plus": "^2.4.1",
+    "flowbite": "^1.8.1",
+    "flowbite-vue": "^0.0.17",
     "sqlite3": "^5.1.6",
     "vue": "^3.3.4",
     "vue-axios": "^3.5.2",
@@ -31,6 +33,7 @@
     "eslint-plugin-vue": "^8.0.3",
     "node-sass": "^9.0.0",
     "sass-loader": "^13.3.2",
+    "tailwindcss": "^3.3.3",
     "typescript": "~4.5.5"
   },
   "eslintConfig": {
