--- a/package.json
+++ b/package.json
@@ -8,16 +8,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.2",
     "axios": "^1.5.1",
     "core-js": "^3.8.3",
     "element-plus": "^2.4.1",
     "flowbite": "^1.8.1",
     "flowbite-vue": "^0.0.17",
+    "router": "^1.3.8",
     "sqlite3": "^5.1.6",
     "vue": "^3.3.4",
     "vue-axios": "^3.5.2",
     "vue-class-component": "^8.0.0-0",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.0.13"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
